<resources>
    <string name="app_name">final-project-team-20</string>
    <string name="distance">Distance</string>
    <string name="planet_name">Planet Name</string>

    <string name="loading_error">Unable to fetch planet data.  Error message: %1$s</string>

    <string name="share_distance_text">Current distance of %1$s from %2$s: %3$s</string>
    <string name="share_temperature_text">Current temperature of %1$s: %2$s</string>
    <string name="share_mass_text">Current mass of %1$s: %2$s</string>
    <string name="share_axis_text">Current SMA of %1$s: %2$s</string>
    <string name="share_period_text">Current orbital period of %1$s: %2$s</string>

    <string name="pref_set_title">Set</string>
    <string name="pref_set_key" translatable="false">set</string>

    <string name="pref_option_title">Planet Options</string>
    <string name="pref_option_key" translatable="false">planet_option</string>

    <string name="pref_entry_option_dist">Distance</string>
    <string name="pref_val_option_dist">distance_light_year</string>

    <string name="pref_entry_option_temp">Temperature</string>
    <string name="pref_val_option_temp">temperature</string>

    <string name="pref_entry_option_mass">Mass</string>
    <string name="pref_val_option_mass">mass</string>

    <string name="pref_entry_option_axis">Semi Major Axis</string>
    <string name="pref_val_option_axis">semi_major_axis</string>

    <string name="pref_entry_option_period">Orbital Period</string>
    <string name="pref_val_option_period">period</string>

    <string name="pref_option_default">distance_light_year</string>

    <string name="venus_description">venus description</string>
    <string name="earth_description">earth description</string>
    <string name="mars_description">mars description</string>
    <string name="mercury_description">mercury description</string>
    <string name="jupiter_description">jupiter description</string>
    <string name="saturn_description">saturn description</string>
    <string name="uranus_description">uranus description</string>
    <string name="neptune_description">neptune description</string>
    <string name="planet_details">Planet Details</string>
    <string name="planets">Planets</string>
    <string name="settings">Settings</string>
    <string name="planet_picture_alt">Planet Picture</string>
    <string name="how_to_use">How to use</string>
    <string name="sun_description">sun description</string>
    <string name="asteroid_description">asteroid description</string>
    <string name="play_button">Play button</string>
</resources>